--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   geolocator: ^9.0.2
   http: ^1.1.0
+  country_picker: ^2.0.20
 
 
 dev_dependencies:
